swagger types fix
